--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@
 gunicorn
 webob # https://docs.pylonsproject.org/projects/webob/en/stable/index.html
 parse # https://github.com/r1chardj0n3s/parse
+requests
+requests-wsgi-adapter
 
 # Code Quality
 black
 mypy
+pytest
+pytest-cov
