--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ webob # https://docs.pylonsproject.org/projects/webob/en/stable/index.html
 parse # https://github.com/r1chardj0n3s/parse
 requests
 requests-wsgi-adapter
+jinja2
 
 # Code Quality
 black
