--- a/.github/workflows/test_example_server.yml
+++ b/.github/workflows/test_example_server.yml
@@ -10,6 +10,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@main
       - name: "Start Server"
         uses: ./
       - run: "curl localhost:8000/info"
