--- a/.github/workflows/test_example_server.yml
+++ b/.github/workflows/test_example_server.yml
@@ -11,6 +11,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
-      - name: "Start Server"
+      - name: "Start Server and Test API"
         uses: ./
-      - run: "curl localhost:8000/info"
